[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "bindings" }
#windows = "0.30.0"
ferris-says = "0.2"

[dependencies.windows]
version = "0.30.0"
features = [
    "Win32_UI_WindowsAndMessaging",
]
